Added test Html-site

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,8 +5,18 @@
     <title>{% block title%}Oscar's Website{% endblock %}</title>
 </head>
 <body>
+    <header>
+        <h1>Oscar Horn Roostami - It student UIO</h1>
+    </header>
+    <nav>
+        <p>Navigation</p>
+    </nav>
+
 {% block content %}
 
 {% endblock %}
+    <footer>
+        <p>Min Github: <a href="https://github.com/Osi135" target="_blank" title="Osi135">Github-Oscar_HR</a></p>
+    </footer>
 </body>
 </html>
