--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,7 +1,16 @@
 {% extends "main/base.html" %}
-{% block title%}Home{% endblock %}
+{% block title %}Oscar-HR{% endblock %}
 
 {% block content %}
-<h1>Min side</h1>
-<p>Innhold kommer senere</p>
+<main>
+    <aside>
+        <p>Side information</p>
+    </aside>
+    <section>
+        <p>My projects</p>
+    </section>
+    <article>
+        <p>Project 1</p>
+    </article>
+</main>
 {% endblock %}
