Static files should now be possible

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title%}Oscar's Website{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/my_stylesheet.css' %}">
 </head>
 <body>
     <header>
