--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,6 +2,7 @@
 {% block title %}Oscar-HR{% endblock %}
 
 {% block content %}
+{% load static %}
 <main>
     <aside>
         <p>Side information</p>
