--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,9 +9,12 @@
     </aside>
     <section>
         <p>My projects</p>
+        <article class="special">
+            <p>Project 1</p>
+        </article>
+        <article>
+            <p>Project 1</p>
+        </article>
     </section>
-    <article>
-        <p>Project 1</p>
-    </article>
 </main>
 {% endblock %}
