--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,7 +11,10 @@
         <h1>Oscar Horn Roostami - It student UIO</h1>
     </header>
     <nav>
-        <p>Navigation</p>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/test">Test</a></li>
+        </ul>
     </nav>
 
 {% block content %}
