--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/test">Test</a></li>
+            <li><a href="/calculator">Calculator</a></li>
         </ul>
     </nav>
 
