--- a/main/templates/main/test.html
+++ b/main/templates/main/test.html
@@ -6,7 +6,6 @@
 {% load static %}
 <h1>This page tests html, css and java-script</h1>
 <h2>Header 2</h2>
-
 <p>Paragraph with: <br>
     <b>Bold</b>
     <strong>Strong</strong>
@@ -19,9 +18,11 @@
     <hr>
     And has a breakline
 </p>
-
 <p class="text1">Here is some generic text for css styling. <br>
     It is heavily styled with css.
+</p>
+<p class="block">
+This is an inline element and <b class="inline">this</b> i a block element
 </p>
 <div class="box1">
     <p class="box-content1">
@@ -99,4 +100,34 @@
 <p style="color: red; font-size: 12px">This text is red and small</p>
 <p class="blue">This text is blue and big</p>
 <img src="{% static 'main/img/codecode.jpg' %}" alt="Hello" width="50%">
+<p class="relative">This text is relative</p>
+<p class="absolute">This text is absolute</p>
+<p class="fixed">This text is fixed</p>
+<h3>Java Script:</h3>
+<p id="demo"></p>
+<button id="my_btn">Wanna be my friend?</button>
+<script>
+    function cel() {
+        f.value = (c.value * 9/5) + 32;
+    };
+    function fah() {
+        c.value = (f.value - 32) * 5/9;
+    };
+let cels = document.getElementById("#celcius");
+let fahr = document.querySelector("#fahrenheit");
+console.log(cels)
+cels.addEventListener("change", cel);
+fahr.addEventListener("change", fah);
+</script>
+<script src="{% static 'main/js/my_scripts.js' %}">
+</script>
+
+<form>
+    <label for="celcius">Celsius:</label><br />
+    <input class="field" type="number" id="celcius" value="0">
+    <br /><br />
+    <label for="fahrenheit">Fahrenheit:</label><br />
+    <input class="field" type="number" id="fahrenheit" value="32">
+</form>
+
 {% endblock %}
