--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,14 @@
 {% extends "main/base.html" %}
+
+
 {% block title %}Oscar-HR{% endblock %}
+
+
+{% block head_content %}
+{% load static %}
+
+{% endblock %}
+
 
 {% block content %}
 {% load static %}
